// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/spin/demo/basic.md correctly 1`] = `
<div
  class="infini-spin infini-spin-spinning"
>
  <span
    class="infini-spin-dot infini-spin-dot-spin"
  >
    <i
      class="infini-spin-dot-item"
    />
    <i
      class="infini-spin-dot-item"
    />
    <i
      class="infini-spin-dot-item"
    />
    <i
      class="infini-spin-dot-item"
    />
  </span>
</div>
`;

exports[`renders ./components/spin/demo/custom-indicator.md correctly 1`] = `
<div
  class="infini-spin infini-spin-spinning"
>
  <i
    aria-label="icon: loading"
    class="anticon anticon-loading infini-spin-dot"
    style="font-size:24px"
  >
    <svg
      aria-hidden="true"
      class="anticon-spin"
      data-icon="loading"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 0 0-94.3-139.9 437.71 437.71 0 0 0-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
      />
    </svg>
  </i>
</div>
`;

exports[`renders ./components/spin/demo/delayAndDebounce.md correctly 1`] = `
<div>
  <div
    class="infini-spin-nested-loading"
  >
    <div
      class="infini-spin-container"
    >
      <div
        class="infini-alert infini-alert-info infini-alert-with-description infini-alert-no-icon"
        data-show="true"
      >
        <span
          class="infini-alert-message"
        >
          Alert message title
        </span>
        <span
          class="infini-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <button
      aria-checked="false"
      class="infini-switch"
      role="switch"
      type="button"
    >
      <span
        class="infini-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/inside.md correctly 1`] = `
<div
  class="example"
>
  <div
    class="infini-spin infini-spin-spinning"
  >
    <span
      class="infini-spin-dot infini-spin-dot-spin"
    >
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/nested.md correctly 1`] = `
<div>
  <div
    class="infini-spin-nested-loading"
  >
    <div
      class="infini-spin-container"
    >
      <div
        class="infini-alert infini-alert-info infini-alert-with-description infini-alert-no-icon"
        data-show="true"
      >
        <span
          class="infini-alert-message"
        >
          Alert message title
        </span>
        <span
          class="infini-alert-description"
        >
          Further details about the context of this alert.
        </span>
      </div>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    Loading state：
    <button
      aria-checked="false"
      class="infini-switch"
      role="switch"
      type="button"
    >
      <span
        class="infini-switch-inner"
      />
    </button>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/size.md correctly 1`] = `
<div>
  <div
    class="infini-spin infini-spin-sm infini-spin-spinning"
  >
    <span
      class="infini-spin-dot infini-spin-dot-spin"
    >
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
    </span>
  </div>
  <div
    class="infini-spin infini-spin-spinning"
  >
    <span
      class="infini-spin-dot infini-spin-dot-spin"
    >
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
    </span>
  </div>
  <div
    class="infini-spin infini-spin-lg infini-spin-spinning"
  >
    <span
      class="infini-spin-dot infini-spin-dot-spin"
    >
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
      <i
        class="infini-spin-dot-item"
      />
    </span>
  </div>
</div>
`;

exports[`renders ./components/spin/demo/tip.md correctly 1`] = `
<div
  class="infini-spin-nested-loading"
>
  <div>
    <div
      class="infini-spin infini-spin-spinning infini-spin-show-text"
    >
      <span
        class="infini-spin-dot infini-spin-dot-spin"
      >
        <i
          class="infini-spin-dot-item"
        />
        <i
          class="infini-spin-dot-item"
        />
        <i
          class="infini-spin-dot-item"
        />
        <i
          class="infini-spin-dot-item"
        />
      </span>
      <div
        class="infini-spin-text"
      >
        Loading...
      </div>
    </div>
  </div>
  <div
    class="infini-spin-container infini-spin-blur"
  >
    <div
      class="infini-alert infini-alert-info infini-alert-with-description infini-alert-no-icon"
      data-show="true"
    >
      <span
        class="infini-alert-message"
      >
        Alert message title
      </span>
      <span
        class="infini-alert-description"
      >
        Further details about the context of this alert.
      </span>
    </div>
  </div>
</div>
`;
